syntax = "proto3";

package auth;

option go_package = "protoc/auth;auth";
service AuthService {
	rpc Register(RegisterRequest) returns (RegisterResponse);
	rpc Login (LoginRequest) returns (LoginResponse);
	rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
    	rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
    	rpc ValidateJWTToken (ValidateJWTTokenRequest) returns (ValidateJWTTokenResponse);
}

message RegisterRequest {
	string name = 1;
	string email = 2;
	string address = 3;
	string password = 4;
}
message RegisterResponse {
	string msg = 1;
	uint32 status = 2;
}
message LoginRequest {
	string email = 1;
	string password = 2;
}
message LoginResponse {
	string token = 1;
	uint32 status = 2;
}
message GetAllUsersRequest {}

message GetAllUsersResponse {
	repeated User users = 1;
}

message User {
	uint32 id = 1;
	string name = 2;
	string email = 3;
	string address = 4;
}

message UpdateUserRequest {
	string name = 1;
	string email = 2;
	string address = 3;
}
message UpdateUserResponse {
	string msg = 1;
	uint32 status = 2;
}
message DeleteUserRequest {
	uint32 id = 1;
}
message DeleteUserResponse {
	string msg = 1;
	uint32 status = 2;
}
message ValidateJWTTokenRequest {
	string token = 1;
}
message ValidateJWTTokenResponse {
	bool valid = 1;
	uint32 user_id = 2;
}

message GetUserByIdRequest {
	uint32 user_id = 1;
}
message GetUserByIdResponse {
	string msg = 1;
	uint32 status = 2;
	User user = 3;
}

