syntax = "proto3";

package warehouse;

option go_package="protoc/warehouse;warehouse";

service Warehouse {
	rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
	rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
	rpc GetAllProducts(GetAllProductsRequest) returns (GetAllProductsResponse);
	rpc GetProductById(GetProductByIdRequest) returns (GetProductByIdResponse);
	rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
	rpc CheckInventory(CheckInventoryRequest) returns (CheckInventoryResponse);
	rpc UpdateInventory(UpdateInventoryRequest) returns (UpdateInventoryResponse);
}
 message CreateProductRequest {
 	string name =  1;
	string desc =  2;
	uint32 price = 3;
 	uint32 quantity = 4;
 }

 message CreateProductResponse {
 	string msg = 1;
	uint32 status = 2;
 }

 message UpdateProductRequest {
 	uint32 id = 1;
	string name = 2;
	string desc = 3;
	uint32 price = 4;
	uint32 quantity = 5;
 }

 message UpdateProductResponse {
 	string msg = 1;
	uint32 status = 2;
 }

message GetAllProductsRequest {}

message GetAllProductsResponse {
	repeated Product products = 1;
}

 message Product {
 	uint32 id = 1;
	string name = 2;
	string desc = 3;
	uint32 price = 4;
	uint32 quantity = 5;
 }

message GetProductByIdRequest {
	uint32 product_id = 1;
}
message GetProductByIdResponse {
	string msg = 1;
	uint32 status = 2;
	Product product = 3;
}

message DeleteProductRequest {
	uint32 product_id = 1;
}

message DeleteProductResponse {
	string msg = 1;
	uint32 status = 2;
}
message CheckInventoryRequest {
	uint32 product_id = 1;
}
message CheckInventoryResponse {
	Product product = 1;
}

message UpdateInventoryRequest {
	uint32 product_id = 1;
	uint32 quantity = 2;
	bool move = 3;
}

message UpdateInventoryResponse {
	string msg = 1;
	uint32 status = 2;
}
